--- a/src/style.css
+++ b/src/style.css
@@ -43,3 +43,13 @@ div {
     height: 150px;
     width: auto;
   }
+
+  input{
+  width: 50%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  }
