--- a/src/style.css
+++ b/src/style.css
@@ -37,6 +37,16 @@ div {
     border-radius: 25px;
   }
 
+  .gobackbutton {
+    background-color: #E2D784;
+    color: #062C30;
+    padding: 5px 20px;
+    text-align: center;
+    font-size: 25px;
+    font-family: 'Monofett';
+    border-radius: 25px;
+  }
+
   img{
     display: block;
     margin: auto;
@@ -52,4 +62,8 @@ div {
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
+  font-size: 16px;
+  font-family: Arial, Helvetica, sans-serif;
   }
+
+  
