--- a/src/style.css
+++ b/src/style.css
@@ -26,7 +26,7 @@ div {
   }
 
   .subt {
-    font-family: 'Jockey One';  
+    font-family: 'PT Sans', sans-serif;
     font-size: 30px;
     color: #F5F5F5;
     margin: 30;
