--- a/src/style.css
+++ b/src/style.css
@@ -27,6 +27,7 @@ div {
 
   .subt {
     font-family: 'PT Sans', sans-serif;
+    font-style: 'Regular 400';
     font-size: 30px;
     color: #F5F5F5;
     margin: 30;
