--- a/src/style.css
+++ b/src/style.css
@@ -26,7 +26,7 @@ div {
   }
 
   .subt {
-    font-family: 'PT Sans',sans-serif;
+    font-family: 'Jockey One',sans-serif;
     font-weight: 700;
     font-size: 30px;
     color: #F5F5F5;
