--- a/src/style.css
+++ b/src/style.css
@@ -40,6 +40,7 @@ div {
     font-size: 35px;
     font-family: 'Monofett';
     border-radius: 25px;
+    margin: 30;
   }
 
   .gobackbutton {
@@ -72,3 +73,32 @@ div {
   font-family: Arial, Helvetica, sans-serif;
   }
 
+  .intro{
+  font-family: 'PT sans',sans-serif;
+  font-weight: 400;
+  font-size:30px ;
+  color: #F5F5F5 ;
+  margin: 30;
+  width: 800px;
+  height: 300px;
+  position: fixed;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  align-content: center;
+  }
+
+  .startButton {
+    background-color: #E2D784;
+    color: #062C30;
+    padding: 5px 20px;
+    text-align: center;
+    font-size: 35px;
+    font-family: 'Monofett';
+    border-radius: 25px;
+    position: fixed;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
