--- a/src/style.css
+++ b/src/style.css
@@ -86,4 +86,11 @@ div {
   }
 
   .startButton {
-
+    background-color: #E2D784;
+    color: #062C30;
+    padding: 5px 20px;
+    text-align: center;
+    font-size: 25px;
+    font-family: 'Monofett';
+    border-radius: 25px;
+  }
