--- a/src/style.css
+++ b/src/style.css
@@ -90,7 +90,8 @@ div {
     color: #062C30;
     padding: 5px 20px;
     text-align: center;
-    font-size: 25px;
+    font-size: 35px;
     font-family: 'Monofett';
     border-radius: 25px;
+    margin: 30;
   }
