--- a/src/style.css
+++ b/src/style.css
@@ -97,7 +97,8 @@ div {
     margin-left: auto;
     margin-right: auto;
     display:block;
-    bottom: 20;
+    height:200px; 
+    width:200px;
 
 
   }
