--- a/src/style.css
+++ b/src/style.css
@@ -97,8 +97,8 @@ div {
     margin-left: auto;
     margin-right: auto;
     display:block;
-    height:200px; 
-    width:200px;
+    margin-top:200px; 
+    margin-bottom:200px;
 
 
   }
