--- a/src/style.css
+++ b/src/style.css
@@ -96,6 +96,7 @@ div {
     margin: 20;
     margin-left: auto;
     margin-right: auto;
+    display: block;
     margin-top:200px; 
     margin-bottom:200px;
 
