--- a/src/style.css
+++ b/src/style.css
@@ -6,17 +6,19 @@ h1 {
     font-family: 'Monofett';
     font-size: 98px;
     color: #E2D784;
-    margin: 20;
+    margin: 15;
     text-align: center;
     align-content: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 div {
     background-color: #05595B;
     width: 800px;
-    height: 400px;
+    height: 450px;
     position: fixed;
-    top: 50%;
+    top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
