--- a/src/style.css
+++ b/src/style.css
@@ -1,66 +1,70 @@
 body {
-    background-color: #062c30
-  }
-
-h1 {
-    font-family: 'Monofett';
-    font-size: 98px;
-    color: #E2D784;
-    margin: 30px;
-    text-align: center;
-    align-content: center;
-    margin-left: auto;
-    margin-right: auto;
-    height: 110px;
+  display:flex;
+  align-items: center;
+  min-height: 100vh;
+  min-width: 100vw;
+  background-color: #062c30;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
-div {
-    background-color: #05595B;
-    width: 800px;
-    height: 450px;
-    position: fixed;
-    top: 60%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    align-content: center;
-  }
+.main-page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width:100%;
+  height: 100%;
+  overflow: hidden;
+}
 
-  .subt {
-    font-family: 'Jockey One',sans-serif;
-    font-size: 30px;
-    color: #F5F5F5;
-  }
+h1 {
+  font-family: "Monofett";
+  font-size: 6em;
+  color: #e2d784;
+  margin: 2%;
+  text-align: center;
+}
 
-  .button {
-    background-color: #E2D784;
-    color: #062C30;
-    padding: 5px 20px;
-    text-align: center;
-    font-size: 35px;
-    font-family: 'Monofett';
-    border-radius: 25px;
-    margin: 30;
-  }
+.subt {
+  font-family: "Jockey One", sans-serif;
+  font-size: 30px;
+  color: #f5f5f5;
+}
 
-  .gobackbutton {
-    background-color: #E2D784;
-    color: #062C30;
-    padding: 5px 20px;
-    text-align: center;
-    font-size: 25px;
-    font-family: 'Monofett';
-    border-radius: 25px;
-  }
+.button {
+  background-color: #e2d784;
+  color: #062c30;
+  padding: 5px 20px;
+  text-align: center;
+  font-size: 2.5em;
+  font-family: "Monofett";
+  border-radius: 25px;
+  width: 10%;
+  min-width: 200px;
+  margin:3%;
+  box-shadow: 5px 7px 4px rgba(0, 0, 0, 0.31);
+  cursor: pointer;
+}
 
-  img{
-    display: block;
-    margin: auto;
-    height: 150px;
-    width: auto;
-  }
+.gobackbutton {
+  background-color: #e2d784;
+  color: #062c30;
+  padding: 5px 20px;
+  text-align: center;
+  font-size: 25px;
+  font-family: "Monofett";
+  border-radius: 25px;
+}
 
-  .inputBox{
+.img {
+  width: 20%;
+  max-width: 150px;
+  margin-top: 2%;
+}
+
+.inputBox {
   width: 50%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -70,66 +74,43 @@ div {
   box-sizing: border-box;
   font-size: 16px;
   font-family: Arial, Helvetica, sans-serif;
-  }
+}
 
-  .intro{
-  font-family: 'PT sans',sans-serif;
+.intro {
+  font-family: "PT sans", sans-serif;
   font-weight: 400;
-  font-size:25px ;
-  color: #F5F5F5 ;
-  margin: 30;
-  width: 800px;
-  height: 200px;
-  top: 55%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  font-size: 1.5em;
+  color: #f5f5f5;
+  width: 60%;
   text-align: center;
-  align-content: center;
-  }
+}
 
-  .startButton {
-    background-color: #E2D784;
-    color: #062C30;
-    padding: 5px 20px;
-    text-align: center;
-    font-size: 35px;
-    font-family: 'Monofett';
-    border-radius: 25px;
-    margin: 20;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-    margin-top: 150px; 
-    margin-bottom:100px;
-  }
-  
-  .copy {
-    background-color: #E2D784;
-    color: #062C30;
-    padding: 5px 20px;
-    text-align: center;
-    font-size: 15px;
-    font-family: 'PT sans',sans-serif;
-    font-weight: 400;
-    border-radius: 25px;
-    position: fixed;
-    transform: translate(-10%, -20%);
-    margin: 20px;
-    align-content: right;
-  }
-
-p{
-  font-family: 'PT sans',sans-serif;
+.copy {
+  background-color: #e2d784;
+  color: #062c30;
+  padding: 5px 20px;
+  text-align: center;
+  font-size: 15px;
+  font-family: "PT sans", sans-serif;
   font-weight: 400;
-  font-size:15px ;
-  color: #010101 ;
-  margin: 30;
-  text-align: center;
-  align-content: center;
-  margin-left: auto;
-  margin-right: auto;
-  position: absolute;
-  bottom: 0;
-  width: 98%;
-  height: 40px;
+  border-radius: 25px;
+  position: fixed;
+  transform: translate(-10%, -20%);
+  margin: 20px;
+  align-content: right;
+}
+
+.box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 70%;
+  max-width: 800px;
+  min-width: 400px;
+  margin: 3%;
+  background-color: #05595B;
+  border: 1px solid rgba(0, 0, 0, 0.23);
+  box-shadow: 5px 7px 4px rgba(0, 0, 0, 0.31);
+  border-radius: 30px;
 }
