--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,7 @@
 body {
-  display:flex;
+  display: flex;
   align-items: center;
+  justify-content: center;
   min-height: 100vh;
   min-width: 100vw;
   background-color: #062c30;
@@ -14,36 +15,34 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width:100%;
+  width: 100%;
   height: 100%;
   overflow: hidden;
 }
 
 h1 {
   font-family: "Monofett";
-  font-size: 6em;
+  font-size: 7em;
   color: #e2d784;
-  margin: 2%;
   text-align: center;
+  margin: 0;
 }
 
 .subt {
   font-family: "Jockey One", sans-serif;
-  font-size: 30px;
+  font-size: 2em;
   color: #f5f5f5;
 }
 
 .button {
   background-color: #e2d784;
   color: #062c30;
-  padding: 5px 20px;
+  padding: 10px;
   text-align: center;
-  font-size: 2.5em;
+  font-size: 35px;
   font-family: "Monofett";
   border-radius: 25px;
-  width: 10%;
-  min-width: 200px;
-  margin:3%;
+  margin: 3%;
   box-shadow: 5px 7px 4px rgba(0, 0, 0, 0.31);
   cursor: pointer;
 }
@@ -51,23 +50,20 @@ h1 {
 .gobackbutton {
   background-color: #e2d784;
   color: #062c30;
-  padding: 5px 20px;
+  padding: 1%;
+  margin: 2%;
   text-align: center;
-  font-size: 25px;
+  align-self: center;
+  font-size: 30px;
   font-family: "Monofett";
   border-radius: 25px;
-}
-
-.img {
-  width: 20%;
-  max-width: 150px;
-  margin-top: 2%;
+  cursor: pointer;
 }
 
 .inputBox {
-  width: 50%;
+  width: 70%;
   padding: 12px 20px;
-  margin: 8px 0;
+  margin: 1%;
   display: inline-block;
   border: 1px solid #ccc;
   border-radius: 4px;
@@ -81,23 +77,19 @@ h1 {
   font-weight: 400;
   font-size: 1.5em;
   color: #f5f5f5;
-  width: 60%;
+  width: 70%;
   text-align: center;
 }
 
 .copy {
   background-color: #e2d784;
   color: #062c30;
-  padding: 5px 20px;
+  padding: 1%;
   text-align: center;
-  font-size: 15px;
+  font-size: 1em;
   font-family: "PT sans", sans-serif;
-  font-weight: 400;
   border-radius: 25px;
-  position: fixed;
-  transform: translate(-10%, -20%);
-  margin: 20px;
-  align-content: right;
+  margin: 1%;
 }
 
 .box {
@@ -105,11 +97,12 @@ h1 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 70%;
+  width: 80%;
   max-width: 800px;
-  min-width: 400px;
-  margin: 3%;
-  background-color: #05595B;
+  min-width: 350px;
+  margin: 2%;
+  padding: 1%;
+  background-color: #05595b;
   border: 1px solid rgba(0, 0, 0, 0.23);
   box-shadow: 5px 7px 4px rgba(0, 0, 0, 0.31);
   border-radius: 30px;
