--- a/src/style.css
+++ b/src/style.css
@@ -26,6 +26,7 @@ h1 {
   color: #e2d784;
   text-align: center;
   margin: 0;
+  pointer-events: none;
 }
 
 .subt {
@@ -79,6 +80,7 @@ h1 {
   color: #f5f5f5;
   width: 70%;
   text-align: center;
+  pointer-events: none;
 }
 
 .copy {
@@ -90,6 +92,7 @@ h1 {
   font-family: "PT sans", sans-serif;
   border-radius: 25px;
   margin: 1%;
+  cursor: pointer;
 }
 
 .box {
